Work on issue list page (show ID & last update w/ sorting), tweak collapsed column layout

--- a/res/~resources/css/issues.css
+++ b/res/~resources/css/issues.css
@@ -67,3 +67,8 @@ option.issue-tag:before {
 .issue-scale-massive:before {
   background-color: #f72319;
 }
+
+.issue-id {
+  font-size: 0.9em;
+  letter-spacing: 0.5px;
+}
